--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-validators==0.18.2
-torch==1.13.1
-torchvision==0.14.1
-timm==0.4.5
-lmdb==1.2.1
-pillow>=8.3.2
-nltk>=3.6.4
-natsort==7.1.0
+validators
+torch
+torchvision
+timm
+lmdb
+pillow
+nltk
+natsort
 opencv-python==4.5.1.48
 opencv-contrib-python==4.5.1.48
-wand==0.6.6
+wand
+fire 
